# hw_4

./: .coverage  pyproject.toml
hw_2/: index_of.py
tests/: test_get.py  test_index_of.py  test_slice.py
